
* Added support for MSSQL.

* Added ``TimeCol``.

* ``RelatedJoin`` and ``SQLRelatedJoin`` objects have a
  ``createRelatedTable`` keyword argument (default ``True``).  If
  ``False``, then the related table won't be automatically created;
  instead you must manually create it (e.g., with explicit SQLObject
  classes for the joins).

* Implemented ``RLIKE`` (reguluar expression LIKE).

Small Features
--------------

* Select over RelatedJoin.

* SQLite foreign keys.

* Postgres DB URIs with a non-default path to unix socket.

* Allow the use of foreign keys in selects.

* Implemented addColumn() for SQLite.

* With PySQLite2 use encode()/decode() from PySQLite1 for BLOBCol if available; else use base64.

Bug Fixes
---------

* Cull patch (clear cache).

* .destroySelf() inside a transaction.

* Synchronize main connection cache during transaction commit.

* Ordering joins with NULLs.

* Fixed bugs with plain/non-plain setters.

* Lots of other bug fixes.

SQLObject 0.7.0
===============

Features & Interface
--------------------

* Inheritance. See Inheritance.html_

.. _Inheritance.html: Inheritance.html

* Date/time validators, converters, tests.

* Both `mxDateTime
  <http://www.egenix.com/files/python/mxDateTime.html>`_ and `datetime
  <http://python.org/doc/current/lib/module-datetime.html>`_ supported
  for ``DateTimeCol``.

* Added ``BLOBCol``, for binary data.

* Added ``PickleCol``, to transparently pickle and unpickle data from
  column.

* New `documented reflection interface
  <http://sqlobject.org/docs/interface.py.html>`_, using the new
  ``.sqlmeta`` class/instance.  Most special attributes that started
  with ``_`` were moved into ``sqlmeta`` (with leading underscore
  removed).

* New aggregate functions for select results, like
  ``cls.select().max(columnName)``: ``.max()``, ``.min()``,
  ``.avg()``.

* ``ConnectionHub`` aka ``sqlhub`` (@@: Needs documentation)

* Command-line client `sqlobject-admin